--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   path: ^1.8.0
   path_provider: ^2.0.7
   sqflite: ^2.0.1
+  location: ^4.3.0
 
 dev_dependencies:
   flutter_test:
