--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   path_provider: ^2.0.7
   sqflite: ^2.0.1
   location: ^4.3.0
+  flutter_map: ^0.14.0
+  latlong2: ^0.8.1
+  material_floating_search_bar: ^0.3.6
+  geocoding: ^2.0.1
+  connectivity: ^3.0.6
 
 dev_dependencies:
   flutter_test:
